# Device-Libraries-ESP-IDF

./: CITATION.cff  LICENSE  NOTICE  README.md
ADS1115/: CMakeLists.txt  MIGRATION.md  README.md
ADS1115/include/: ads1115.h
ADS1115/src/: ads1115.c
AS5510/: README.md
AS5510/include/: as5510.h  helpers_as5510.h
AS5510/src/: helpers_as5510.c
AS5600/: CMakeLists.txt  README.md
AS5600/include/: as5600.h
AS5600/src/: as5600.c
BNO055/: CMakeLists.txt  README.md
BNO055/include/: bno055.h  helpers_bno055.h
BNO055/src/: bno055.c  helpers_bno055.c
BQ25672/: CMakeLists.txt  README.md
BQ25672/include/: bq25672.h
BQ25672/src/: bq25672.c
MAX30102/: CMakeLists.txt  README.md
MAX30102/include/: helpers_max30102.h  max30102.h
MAX30102/src/: helpers_max30102.c  max30102.c
MAX6675/: CMakeLists.txt  README.md
MAX6675/include/: max6675.h
MAX6675/src/: max6675.c
SSD1306/: CMakeLists.txt  README.md
SSD1306/include/: ssd1306.h
SSD1306/src/: ssd1306.c
